force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Perforce_Connector__c/agf__ADM_Perforce_Connector__c.object-meta.xml
<CustomObject>
    <label>Source Control Connector</label>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Perforce Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Control Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>