force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Perforce_Connector__c/fields/agf__Changelist__c.field-meta.xml
<CustomField>
    <fullName>agf__Changelist__c</fullName>
    <label>Change List</label>
    <length>32</length>
    <type>Text</type>
</CustomField>