force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Perforce_Connector__c/fields/agf__Describe__c.field-meta.xml
<CustomField>
    <fullName>agf__Describe__c</fullName>
    <label>Describe</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>