force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Perforce_Connector__c/fields/agf__External_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__External_ID__c</fullName>
    <description>CL@workId</description>
    <externalId>true</externalId>
    <inlineHelpText>CL@workId</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>