force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Perforce_Connector__c/fields/agf__Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Release__c</fullName>
    <label>Release</label>
    <length>32</length>
    <type>Text</type>
</CustomField>