force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Perforce_Connector__c/fields/agf__Task__c.field-meta.xml
<CustomField>
    <fullName>agf__Task__c</fullName>
    <label>Task</label>
    <length>50</length>
    <type>Text</type>
</CustomField>