force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Perforce_Connector__c/fields/agf__User__c.field-meta.xml
<CustomField>
    <fullName>agf__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Perforce_Connectors</relationshipName>
    <type>Lookup</type>
</CustomField>