force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Perforce_Connector__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>agf__Changelist__c</columns>
    <columns>agf__Describe__c</columns>
    <columns>agf__Release__c</columns>
    <columns>agf__Work__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>